# Site-Flask

./: .dockerignore  .env.template  .gitignore  .pgpass  .pgpass.template  Dockerfile  LICENSE  README.md  add_user_to_db.py  config.py  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  robots.txt  run.py  sitemap.xml  tox.ini  wsgi.py
.github/workflows/: build-test.yml  docker-build-publish.yml  docker-image.yml  main.yml  registry-pull.yml
app/: __init__.py  decorators.py  models.py
app/auth/: forms.py  views.py
app/main/: __init__.py  errors.py  forms.py  views.py
app/static/assets/css/: other.css
app/static/assets/favicon/: browserconfig.xml  site.webmanifest
app/static/assets/js/: other.js  util.js
app/static/css/: other.css  pixel.css
app/templates/: _sd_art.html  about.html  base.html  ihome.html  index.html  mlsport.html  mltoolsbot.html  panel.html  projects.html  sd_art.html  textsummary.html  trade4me.html  yandex_eb179a9460200610.html
app/templates/auth/: sign-in.html
app/templates/components/: _base.html  _blank.html  _footer.html  _footer_v2.html  _head.html  _header.html  _page_loader.html  _scripts.html
app/templates/errors/: 403.html  404.html  500.html  error.html
db_init/: init.sql
docker/: Dockerfile  docker-compose.yml  gunicorn-cfg.py
migrations/: env.py
migrations/versions/: 38c4e85512a9_initial_migration.py  5085b938eec4_.py  9aca6377f4eb_initial.py
nginx/: site.conf.template
systemd/: gunicorn.service  gunicorn.service.template
tests/: test_basics.py  test_user_model.py
